oci-ops: upgrade image version

--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -1,10 +1,10 @@
 [
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "hashicorp/vault:1.19.4",
-        "archive": "docker.io_hashicorp_vault_1.19.4.tar",
+        "publicRepo": "hashicorp/vault:1.20.3",
+        "archive": "docker.io_hashicorp_vault_1.20.3.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "hashicorp/vault:1.19.4",
+        "privateRepo": "hashicorp/vault:1.20.3",
         "description": "https://hub.docker.com/r/hashicorp/vault/tags",
     },
     {
@@ -17,8 +17,8 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "apteno/alpine-jq:2025-05-18",
-        "archive": "docker.io_apteno_alpine-jq_2025-05-18.tar",
+        "publicRepo": "apteno/alpine-jq:2025-08-31",
+        "archive": "docker.io_apteno_alpine-jq_2025-08-31.tar",
         "privateRegistry": "192.168.255.10:5000",
         "privateRepo": "apteno/alpine-jq:latest",
         "description": "https://hub.docker.com/r/apteno/alpine-jq/tags",
@@ -33,34 +33,34 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "hashicorp/consul:1.21.1",
-        "archive": "docker.io_hashicorp_consul_1.21.1.tar",
+        "publicRepo": "hashicorp/consul:1.21.4",
+        "archive": "docker.io_hashicorp_consul_1.21.4.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "hashicorp/consul:1.21.1",
+        "privateRepo": "hashicorp/consul:1.21.4",
         "description": "https://hub.docker.com/r/hashicorp/consul/tags",
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "hashicorp/nomad:1.10.3",
-        "archive": "docker.io_hashicorp_nomad_1.10.3.tar",
+        "publicRepo": "hashicorp/nomad:1.10.4",
+        "archive": "docker.io_hashicorp_nomad_1.10.4.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "hashicorp/nomad:1.10.3",
+        "privateRepo": "hashicorp/nomad:1.10.4",
         "description": "https://hub.docker.com/r/hashicorp/nomad/tags",
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "multani/nomad:1.10.3",
-        "archive": "docker.io_multani_nomad_1.10.3.tar",
+        "publicRepo": "multani/nomad:1.10.4",
+        "archive": "docker.io_multani_nomad_1.10.4.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "multani/nomad:1.10.3",
+        "privateRepo": "multani/nomad:1.10.4",
         "description": "https://hub.docker.com/r/multani/nomad/tags",
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "grafana/grafana:12.1.0",
-        "archive": "docker.io_grafana_grafana_12.1.0.tar",
+        "publicRepo": "grafana/grafana:12.1.1",
+        "archive": "docker.io_grafana_grafana_12.1.1.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "grafana/grafana:12.1.0",
+        "privateRepo": "grafana/grafana:12.1.1",
         "description": "https://hub.docker.com/r/grafana/grafana/tags, https://quay.io/repository/giantswarm/grafana?tab=tags",
     },
     {
@@ -71,20 +71,20 @@
         "privateRepo": "grafana/loki:3.5.3",
         "description": "https://hub.docker.com/r/grafana/loki/tags, https://quay.io/repository/giantswarm/loki?tab=tags",
     },
+    // {
+    //     "publicRegistry": "docker.io",
+    //     "publicRepo": "bitnami/grafana-loki:3.5.3",
+    //     "archive": "docker.io_bitnami_grafana-loki_3.5.3.tar",
+    //     "privateRegistry": "192.168.255.10:5000",
+    //     "privateRepo": "bitnami/grafana-loki:3.5.3",
+    //     "description": "https://hub.docker.com/r/bitnami/grafana-loki/tags",
+    // },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "bitnami/grafana-loki:3.5.3",
-        "archive": "docker.io_bitnami_grafana-loki_3.5.3.tar",
+        "publicRepo": "grafana/alloy:v1.10.2",
+        "archive": "docker.io_grafana_alloy_v1.10.2.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "bitnami/grafana-loki:3.5.3",
-        "description": "https://hub.docker.com/r/bitnami/grafana-loki/tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "grafana/alloy:v1.8.3",
-        "archive": "docker.io_grafana_alloy_v1.8.3.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "grafana/alloy:v1.8.3",
+        "privateRepo": "grafana/alloy:v1.10.2",
         "description": "https://hub.docker.com/r/grafana/alloy/tags, https://quay.io/repository/giantswarm/alloy?tab=tags",
     },
     {
@@ -95,14 +95,14 @@
         "privateRepo": "prometheus/prometheus:v3.5.0",
         "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
     },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "bitnami/prometheus:3.5.0",
-        "archive": "docker.io_bitnami_prometheus_3.5.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "bitnami/prometheus:3.5.0",
-        "description": "https://hub.docker.com/r/bitnami/prometheus/tags",
-    },
+    // {
+    //     "publicRegistry": "docker.io",
+    //     "publicRepo": "bitnami/prometheus:3.5.0",
+    //     "archive": "docker.io_bitnami_prometheus_3.5.0.tar",
+    //     "privateRegistry": "192.168.255.10:5000",
+    //     "privateRepo": "bitnami/prometheus:3.5.0",
+    //     "description": "https://hub.docker.com/r/bitnami/prometheus/tags",
+    // },
     {
         "publicRegistry": "quay.io",
         "publicRepo": "prometheus/alertmanager:v0.28.1",
@@ -119,20 +119,20 @@
         "privateRepo": "prometheus/blackbox-exporter:v0.27.0",
         "description": "https://quay.io/repository/prometheus/blackbox-exporter?tab=tags",
     },
+    // {
+    //     "publicRegistry": "docker.io",
+    //     "publicRepo": "bitnami/blackbox-exporter:0.26.0",
+    //     "archive": "docker.io_bitnami_blackbox-exporter_0.26.0.tar",
+    //     "privateRegistry": "192.168.255.10:5000",
+    //     "privateRepo": "bitnami/blackbox-exporter:0.26.0",
+    //     "description": "https://hub.docker.com/r/bitnami/blackbox-exporter/tags",
+    // },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "bitnami/blackbox-exporter:0.26.0",
-        "archive": "docker.io_bitnami_blackbox-exporter_0.26.0.tar",
+        "publicRepo": "library/redis:8.2.1-alpine",
+        "archive": "docker.io_library_redis_8.2.1-alpine.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "bitnami/blackbox-exporter:0.26.0",
-        "description": "https://hub.docker.com/r/bitnami/blackbox-exporter/tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "library/redis:8.2.0-alpine",
-        "archive": "docker.io_library_redis_8.2.0-alpine.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "library/redis:8.2.0-alpine",
+        "privateRepo": "library/redis:8.2.1-alpine",
         "description": "https://hub.docker.com/_/redis/tags",
     },
     {
