day0-deploy: fix image registry address

--- a/TerraformWorkShop/Quadlet/postgresql-infra/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/postgresql-infra/attachments/values-sololab.yaml
@@ -1,5 +1,5 @@
 global:
-  imageRegistry: zot.day0.sololab
+  imageRegistry: zot.day0.sololab:5000
 postgresql:
   containerPorts: []
   extraEnvVars:
