nfs-ganesha-deploy-podman: add selinux label

--- a/TerraformWorkShop/Quadlet/nfs-ganesha/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/nfs-ganesha/attachments/values-sololab.yaml
@@ -2,6 +2,9 @@ global:
   imageRegistry: zot.day0.sololab
 nfs:
   containerPorts: []
+  containerSecurityContext:
+    seLinuxOptions:
+      type: spc_t
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
