--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -56,67 +56,11 @@
         "description": "https://hub.docker.com/r/hectorm/nfs-ganesha/tags",
     },
     {
-        "publicRegistry": "docker.io",
-        "publicRepo": "grafana/grafana:12.1.1",
-        "archive": "docker.io_grafana_grafana_12.1.1.tar",
+        "publicRegistry": "registry.k8s.io",
+        "publicRepo": "sig-storage/nfsplugin:v4.11.0",
+        "archive": "registry.k8s.io_sig-storage_nfsplugin_v4.11.0.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "grafana/grafana:12.1.1",
-        "description": "https://hub.docker.com/r/grafana/grafana/tags, https://quay.io/repository/giantswarm/grafana?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "grafana/loki:3.5.3",
-        "archive": "docker.io_grafana_loki_3.5.3.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "grafana/loki:3.5.3",
-        "description": "https://hub.docker.com/r/grafana/loki/tags, https://quay.io/repository/giantswarm/loki?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "grafana/alloy:v1.10.2",
-        "archive": "docker.io_grafana_alloy_v1.10.2.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "grafana/alloy:v1.10.2",
-        "description": "https://hub.docker.com/r/grafana/alloy/tags, https://quay.io/repository/giantswarm/alloy?tab=tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "prometheus/prometheus:v3.5.0",
-        "archive": "quay.io_prometheus_prometheus_v3.5.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "prometheus/prometheus:v3.5.0",
-        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "prometheus/alertmanager:v0.28.1",
-        "archive": "quay.io_prometheus_alertmanager_v0.28.1.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "prometheus/alertmanager:v0.28.1",
-        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "prometheus/blackbox-exporter:v0.27.0",
-        "archive": "quay.io_prometheus_blackbox-exporter_v0.27.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "prometheus/blackbox-exporter:v0.27.0",
-        "description": "https://quay.io/repository/prometheus/blackbox-exporter?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "library/redis:8.2.1-alpine",
-        "archive": "docker.io_library_redis_8.2.1-alpine.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "library/redis:8.2.1-alpine",
-        "description": "https://hub.docker.com/_/redis/tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "redis/redisinsight:2.70.1",
-        "archive": "docker.io_redis_redisinsight_2.70.1.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "redis/redisinsight:2.70.1",
-        "description": "https://hub.docker.com/r/redis/redisinsight/tags",
+        "privateRepo": "sig-storage/nfsplugin:v4.11.0",
+        "description": "https://hub.docker.com/r/hectorm/nfs-ganesha/tags",
     },
 ]
