consul-deploy-bin: enable acl in client agent

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/consul.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/consul.yaml
@@ -21,6 +21,7 @@ storage:
       contents:
         inline: |
           acl {
+            enabled = true
             tokens {
               default = "${consul_acl_token}"
             }
