--- a/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/storage.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/storage.yaml
@@ -6,22 +6,33 @@ storage:
     - device: /dev/sdb
       wipe_table: false
       partitions:
-        - label: 1001
+        - label: 1000
           number: 1
           size_mib: 40959
-        - label: 1000
+        - label: 1001
           number: 2
           size_mib: 40959
+        - label: data
+          number: 3
+          size_mib: 40959
+  directories:
+    - path: /var/mnt/data
   filesystems:
+    - device: /dev/disk/by-partlabel/1000
+      format: xfs
+      path: /var/home/core
+      wipe_filesystem: false
+      label: 1000
+      with_mount_unit: true
     - device: /dev/disk/by-partlabel/1001
       format: xfs
       path: /var/home/podmgr
       wipe_filesystem: false
       label: 1001
       with_mount_unit: true
-    - device: /dev/disk/by-partlabel/1000
+    - device: /dev/disk/by-partlabel/data
       format: xfs
-      path: /var/home/core
+      path: /var/mnt/data
       wipe_filesystem: false
-      label: 1000
+      label: data
       with_mount_unit: true
