traefik-deploy-podman-quadlet: use consul dns for consul server, add tag filter for consulCatalog, remove tag prefix filter

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -10,14 +10,14 @@ traefik:
     static:
       providers:
         consulCatalog:
+          constraints: "Tag(`host=day1`)"
           endpoint:
-            address: consul.day1.sololab:8501
+            address: consul.service.consul:8501
             datacenter: dc1
             scheme: https
             tls:
               ca: /etc/traefik/tls/ca.crt
           exposedByDefault: false
-          prefix: traefik-day1
       serversTransport:
         rootCAs:
           - /etc/traefik/tls/ca.crt
