fcos-deploy-ignition: add pcp-zeroconf for metric, add reboot for rpm-ostree-install

--- a/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/packages.yaml
@@ -112,7 +112,8 @@ systemd:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=/usr/bin/rpm-ostree install --apply-live --allow-inactive $RPMS
+        ExecStart=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
+        ExecStart=/bin/systemctl --no-block reboot
         [Install]
         WantedBy=multi-user.target
