day2-fcos-deploy-ignition: config vm to stateless, remove power dns related resources, remove data disk, remove static network config, host consul/nomad bin & data in boot disk, switch tf backend to s3(minio)

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/base.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/base.yaml
@@ -30,3 +30,6 @@ storage:
     # link the socket in this dir for socket auto start after machine boot
     - path: /etc/systemd/system/sockets.target.wants/podman.socket
       target: /usr/lib/systemd/system/podman.socket
+  directories:
+    - path: /opt/bin
+      mode: 0755
