nomad-deploy-client-ignition: update socket name, vault server address

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -96,7 +96,7 @@ storage:
           plugin "nomad-driver-podman" {
             config {
               socket { 
-                name        = "root"
+                name        = "default"
                 socket_path = "unix://run/podman/podman.sock"
               }
               socket {
