--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -32,7 +32,7 @@ Host Day1-FCOS
 
 Host Day2-FCOS
     StrictHostKeyChecking no
-    HostName 192.168.255.30
+    HostName day2.node.consul
     User podmgr
     IdentityFile ~/.ssh/vagrant
     Port 22
