nomad-deploy-systemd: add ExecStartPre to detect nomad server, consul and vault

--- a/TerraformWorkShop/System/nomad-client/attachments/nomad-client.service
+++ b/TerraformWorkShop/System/nomad-client/attachments/nomad-client.service
@@ -19,6 +19,8 @@ Environment="NOMAD_CLIENT_KEY=${NOMAD_CLIENT_KEY}"
 Environment="NOMAD_TOKEN=${NOMAD_TOKEN}"
 
 ExecReload=/bin/kill -HUP $MAINPID
+ExecStartPre=${ExecStartPreNomad}
+ExecStartPre=${ExecStartPreConsul}
 ExecStart=sudo ${bin_path} agent -config ${config_file}
 ExecStartPost = /bin/bash -c "sleep $(shuf -i 10-20 -n 1) &&  ${bin_path} node eligibility -enable -self"
 KillMode=process
