--- a/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
@@ -45,6 +45,7 @@ consul:
         tokens:
           initial_management: e95b599e-166e-7d80-08ad-aee76e7ddf19
           agent: e95b599e-166e-7d80-08ad-aee76e7ddf19
+          dns: e95b599e-166e-7d80-08ad-aee76e7ddf19
           config_file_service_registration: e95b599e-166e-7d80-08ad-aee76e7ddf19
       # auto_config:
       #   authorization:
