--- a/TerraformWorkShop/System/consul-client/attachments/consul-client.service
+++ b/TerraformWorkShop/System/consul-client/attachments/consul-client.service
@@ -2,18 +2,12 @@
 [Unit]
 Description="HashiCorp Consul - A service mesh solution"
 Documentation=https://www.consul.io/
-Requires=network-online.target
-After=network-online.target
-ConditionFileNotEmpty=/etc/consul.d/consul.hcl
+After=podman-user-wait-network-online.service
 
 [Service]
-EnvironmentFile=-/etc/consul.d/consul.env
-User=${user}
-Group=${group}
 TimeoutStartSec=infinity
-AmbientCapabilities=CAP_NET_BIND_SERVICE
-# ExecStartPre=/usr/bin/sleep 3
-ExecStart=/usr/bin/consul agent -config-dir=/etc/consul.d/
+ExecStartPre=${ExecStartPreConsul}
+ExecStart=${bin_path} agent -config=${config_file} -config-dir=${config_dir}
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGTERM
@@ -22,4 +16,4 @@ RestartSec=3
 LimitNOFILE=65536
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
