traefik-deploy-podman-kube: update variable structure, add consul token for consul catalog provider

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -17,6 +17,7 @@ traefik:
             scheme: https
             tls:
               ca: /etc/traefik/tls/ca.crt
+            token: # set by terraform get value from vault
           exposedByDefault: false
       serversTransport:
         rootCAs:
